--- a/package.json
+++ b/package.json
@@ -15,16 +15,24 @@
     "@nuxt/icon": "2.0.0",
     "@nuxtjs/tailwindcss": "7.0.0-beta.0",
     "@tailwindcss/vite": "^4.1.14",
+    "@tanstack/vue-table": "^8.21.3",
+    "@vee-validate/zod": "^4.15.1",
+    "@vueuse/core": "^13.9.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "embla-carousel-vue": "^8.6.0",
     "eslint": "^9.0.0",
     "lucide-vue-next": "^0.544.0",
     "nuxt": "^3.19.2",
+    "reka-ui": "^2.5.1",
     "shadcn-nuxt": "2.2.0",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.14",
     "tw-animate-css": "^1.4.0",
+    "vaul-vue": "^0.4.1",
+    "vee-validate": "^4.15.1",
     "vue": "^3.5.22",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^4.1.11"
   }
 }
