--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/fonts": "0.11.4",
     "@nuxt/icon": "2.0.0",
     "@nuxtjs/tailwindcss": "7.0.0-beta.0",
+    "@pinia/nuxt": "^0.11.2",
     "@tailwindcss/vite": "^4.1.14",
     "@tanstack/vue-table": "^8.21.3",
     "@vee-validate/zod": "^4.15.1",
@@ -24,6 +25,8 @@
     "eslint": "^9.0.0",
     "lucide-vue-next": "^0.544.0",
     "nuxt": "^3.19.2",
+    "pinia": "^3.0.3",
+    "pinia-plugin-persistedstate": "^4.5.0",
     "reka-ui": "^2.5.1",
     "shadcn-nuxt": "2.2.0",
     "tailwind-merge": "^3.3.1",
