--- a/package.json
+++ b/package.json
@@ -39,5 +39,8 @@
   "packageManager": "pnpm@10.18.0",
   "engines": {
     "node": "23.11.0"
+  },
+  "devDependencies": {
+    "@nuxtjs/color-mode": "^3.5.2"
   }
 }
