--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@tanstack/vue-table": "^8.21.3",
     "@vee-validate/zod": "^4.15.1",
     "@vueuse/core": "^13.9.0",
+    "aframe": "^1.7.1",
+    "aframe-render-order-component": "^1.1.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "embla-carousel-vue": "^8.6.0",
@@ -44,6 +46,7 @@
     "node": "23.11.0"
   },
   "devDependencies": {
-    "@nuxtjs/color-mode": "^3.5.2"
+    "@nuxtjs/color-mode": "^3.5.2",
+    "@types/aframe": "^1.2.8"
   }
 }
