--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 		"format:check": "prettier --check \"**/*.{js,mjs,ts,vue,json,css,scss,md}\""
 	},
 	"dependencies": {
+		"@formkit/auto-animate": "^0.9.0",
 		"@nuxt/eslint": "1.9.0",
 		"@nuxt/fonts": "0.11.4",
 		"@nuxt/icon": "2.0.0",
@@ -51,8 +52,8 @@
 	},
 	"devDependencies": {
 		"@nuxtjs/color-mode": "^3.5.2",
-		"prettier": "^3.4.2",
+		"@types/aframe": "^1.2.8",
 		"eslint-config-prettier": "^10.0.1",
-		"@types/aframe": "^1.2.8"
+		"prettier": "^3.4.2"
 	}
 }
