--- a/package.json
+++ b/package.json
@@ -20,7 +20,6 @@
 		"@formkit/auto-animate": "^0.9.0",
 		"@nuxt/eslint": "1.9.0",
 		"@nuxt/fonts": "0.11.4",
-		"@nuxt/icon": "2.0.0",
 		"@nuxtjs/tailwindcss": "7.0.0-beta.0",
 		"@pinia/nuxt": "^0.11.2",
 		"@tailwindcss/vite": "^4.1.14",
@@ -36,6 +35,7 @@
 		"eslint": "^9.0.0",
 		"lucide-vue-next": "^0.544.0",
 		"nuxt": "^3.19.2",
+		"nuxt-icon": "1.0.0-beta.7",
 		"pinia": "^3.0.3",
 		"pinia-plugin-persistedstate": "^4.5.0",
 		"reka-ui": "^2.5.1",
@@ -55,6 +55,7 @@
 		"node": "23.11.0"
 	},
 	"devDependencies": {
+		"@nuxt/icon": "2.0.0",
 		"@nuxtjs/color-mode": "^3.5.2",
 		"@types/aframe": "^1.2.8",
 		"eslint-config-prettier": "^10.0.1",
